adding get tracker, delete chatroom and get chatroom by trackerid with documentation
