# api/index.js
@@ -5,6 +5,7 @@ import http from "http";
 import { Server } from "socket.io";
 import routers from "./routers/index.js";
 import swaggerDocs from "./routers/swagger.js";
+import { sendMessage } from "./routers/chatroom/mutation.js";
 
 const app = express();
 dotenv.config();
@@ -34,13 +35,21 @@ app.use(express.urlencoded({ extended: true }));
 app.use("/api", routers);
 
 io.on("connection", (socket) => {
-  console.log("A user connected");
+  console.log("A user connected, socket id: ", socket.id);
 
   socket.on("disconnect", () => {
-    console.log("A user disconnected");
+    console.log("A user disconnected, socket id: ", socket.id);
   });
 
   // Handle custom events here
+  socket.on("send-message", async (messageData) => {
+    try {
+      let message = await sendMessage(messageData);
+      io.to(messageData.chatRoomId).emit("new-message", message);
+    } catch (error) {
+      console.log(error);
+    }
+  });
 });
 
 server.listen(PORT, () => {
