# api/routers/chatroom/index.js
@@ -1,8 +1,12 @@
 import { Router } from "express";
-import { openChatRoom } from "./mutation.js";
+import { deleteChatRoomByTrackerId, openChatRoom } from "./mutation.js";
+import { getAllChatRooms, getChatRoomByTrackerId } from "./query.js";
 
 const chatRoomRouter = Router();
 
 chatRoomRouter.post("/", openChatRoom);
+chatRoomRouter.get("/", getAllChatRooms);
+chatRoomRouter.get("/trackerid/:id", getChatRoomByTrackerId);
+chatRoomRouter.delete("/trackerid/:id", deleteChatRoomByTrackerId);
 
 export default chatRoomRouter;
