# api/routers/index.js
@@ -4,6 +4,7 @@ import { fileURLToPath } from "url";
 import trackerRouter from "./tracker/index.js";
 import { SwaggerSpec } from "./swagger.js";
 import declineRouter from "./decline/index.js";
+import chatRoomRouter from "./chatroom/index.js";
 
 const routers = Router();
 
@@ -12,6 +13,7 @@ const __dirname = dirname(__filename);
 
 routers.use("/tracker", trackerRouter);
 routers.use("/decline", declineRouter);
+routers.use("/chatroom", chatRoomRouter);
 
 routers.get("/", (req, res) => {
   return res.json({
